5d (0.1.1) unstable; urgency=low

  * make "dot" do the same as "quote".
  * make Str a Box that carries along the size.
  * add allocateRecord.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Fri, 16 Dec 2011 19:52:00 +0100

5d (0.1.0) unstable; urgency=low

  * switch to Shunting Yard Parser (in order to be able to load GTK - no, really).

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Tue, 13 Dec 2011 15:32:00 +0100

5d (0.0.13) unstable; urgency=low

  * use faster FFI.
  * make fallback use exceptions to signify failure.
  * use FFI caption on TUI messageBox.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 11 Dec 2011 22:00:00 +0100

5d (0.0.12) unstable; urgency=low

  * add faster default module dispatcher.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 11 Dec 2011 01:06:00 +0100

5d (0.0.11) unstable; urgency=low

  * allow NUL bytes in Str.
  * fix Kindle build.
  * allow literal Str to contain hex sequences.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Thu, 8 Dec 2011 12:15:49 +0100

5d (0.0.10) unstable; urgency=low

  * add some FFI functionality.
  * move operator (++) to "less important than apply".
  * force FFI to be monadic.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Tue, 6 Dec 2011 21:43:53 +0100

5d (0.0.9) unstable; urgency=low

  * add simple I/O and GUI functionality.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Mon, 5 Dec 2011 20:13:53 +0100

5d (0.0.8) unstable; urgency=low

  * start tracking indentation.
  * support "_" in lexer.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 4 Dec 2011 12:51:00 +0100

5d (0.0.7) unstable; urgency=low

  * replace all builtins and simplify builtin handling.
  * support keyword arguments.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sat, 3 Dec 2011 16:57:00 +0100

5d (0.0.6) unstable; urgency=low

  * check for unbound variables before allowing something to be defined.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Wed, 30 Nov 2011 18:32:00 +0100
