@@ -486,8 +486,6 @@ DEFINE_SIMPLE_OPERATION(KeywordP, keyword_P(reduce(argument)))
 DEFINE_SIMPLE_OPERATION(SymbolP, symbol_P(reduce(argument)))
 DEFINE_SIMPLE_OPERATION(SymbolFromStrGetter, (argument = reduce(argument), str_P(argument) ? AST::symbolFromStr(get_native_string(argument)) : FALLBACK))
 DEFINE_SIMPLE_OPERATION(KeywordFromStrGetter, (argument = reduce(argument), str_P(argument) ? AST::keywordFromStr(get_native_string(argument)) : FALLBACK))
-DEFINE_SIMPLE_OPERATION(ListFromStrGetter, (argument = reduce(argument), str_P(argument) ? Evaluators::listFromStr(dynamic_cast<Str*>(argument)) : FALLBACK))
-DEFINE_SIMPLE_OPERATION(StrFromListGetter, (argument = reduce(argument), (cons_P(argument) || nil_P(argument)) ? Evaluators::strFromList(dynamic_cast<Cons*>(argument)) : FALLBACK))
 DEFINE_SIMPLE_OPERATION(KeywordStr, (argument = reduce(argument), keyword_P(argument) ? Evaluators::internNative(dynamic_cast<Keyword*>(argument)->name) : FALLBACK))
 IMPLEMENT_NUMERIC_BUILTIN(addA, +)
 DEFINE_BINARY_OPERATION(Adder, addA)
@@ -525,8 +523,6 @@ REGISTER_BUILTIN(KeywordP, 1, 0, AST::symbolFromStr("keyword?"))
 REGISTER_BUILTIN(SymbolFromStrGetter, 1, 0, AST::symbolFromStr("symbolFromStr"))
 REGISTER_BUILTIN(KeywordFromStrGetter, 1, 0, AST::symbolFromStr("keywordFromStr"))
 REGISTER_BUILTIN(KeywordStr, 1, 0, AST::symbolFromStr("keywordStr"))
-REGISTER_BUILTIN(ListFromStrGetter, 1, 0, AST::symbolFromStr("listFromStr"))
-REGISTER_BUILTIN(StrFromListGetter, 1, 0, AST::symbolFromStr("strFromList"))
 REGISTER_BUILTIN(WorldRunner, 1, 0, AST::symbolFromStr("runWorld"))
 REGISTER_BUILTIN(ModuleDispatcher, 2, 1, AST::symbolFromStr("dispatchModule"))
 REGISTER_BUILTIN(ModuleBoxMaker, 1, 0, AST::symbolFromStr("makeModuleBox"));
