@@ -44,8 +44,6 @@ bool define_P(AST::Node* input);
 AST::Node* programFromSExpression(AST::Node* root);
 AST::Node* evaluate(AST::Node* input);
 AST::Cons* evaluateToCons(AST::Node* input);
-AST::Node* listFromStr(AST::Str* node);
-AST::Node* strFromList(AST::Cons* node);
 AST::Node* quote(AST::Node* node);
 int increaseGeneration(void);
 
