@@ -427,8 +427,8 @@ static void REPL_init_builtins(struct REPL* self) {
 	REPL_add_builtin_method(self, Symbols::SsymbolFromStr, &Evaluators::SymbolFromStrGetter);
 	REPL_add_builtin_method(self, Symbols::SkeywordFromStr, &Evaluators::KeywordFromStrGetter);
 	REPL_add_builtin_method(self, Symbols::SstrFromKeyword, &Evaluators::KeywordStr);
-	REPL_add_builtin_method(self, Symbols::SlistFromStr, &Evaluators::ListFromStrGetter);
-	REPL_add_builtin_method(self, Symbols::SstrFromList, &Evaluators::StrFromListGetter);
+	REPL_add_builtin_method(self, Symbols::SlistFromStr, &FFIs::ListFromStrGetter);
+	REPL_add_builtin_method(self, Symbols::SstrFromList, &FFIs::StrFromListGetter);
 	REPL_add_builtin_method(self, Symbols::SrunWorld, &Evaluators::WorldRunner);
 	REPL_add_static_builtin_binding(self, Symbols::Shasht, Evaluators::churchTrue);
 	REPL_add_static_builtin_binding(self, Symbols::Shashf, Evaluators::churchFalse);
